--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -689,7 +689,7 @@ title = {Natural language processing: History, evolution, application, and futur
 booktitle = {Lecture Notes in Networks and Systems},
 publisher = {Springer},
 volume = {167},
-isbn = {978-981-15-9711-4},
+%isbn = {978-981-15-9711-4},
 doi = {10.1007/978-981-15-9712-1_31}
 }
 
