Improve more wording in ch4

--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -6,13 +6,13 @@
 
 This section contains the results of the experiments described in Section \ref{sec:methodology}. Refer to Appendix \ref{appendix:computerspec} for the hardware and software specifications of the computer which produced the results in this section.
 
-The goal of this thesis is to use the sliced Constant-Q Transform (sliCQT) in CrossNet-Open-Unmix (X-UMX), a neural network for music demixing. X-UMX represents musical signals with the Short-Time Fourier Transform (STFT), which is limited by a fixed time-frequency resolution. The sliCQT by contrast has a varying time-frequency resolution which may be more suitable for musical applications such as music demixing.
+The goal of this thesis was to use the sliced Constant-Q Transform (sliCQT) in CrossNet-Open-Unmix (X-UMX), a neural network for music demixing. X-UMX represents musical signals with the Short-Time Fourier Transform (STFT), which is limited by a fixed time-frequency resolution. In contrast, the sliCQT has a varying time-frequency resolution, which may be more suitable for musical applications such as music demixing.
 
 To use the sliCQT in a neural network, I first ported the sliCQT library to use PyTorch, a Python framework for GPU-based deep neural networks. The porting effort was described in Section \ref{sec:torchslicq}, and in Section \ref{sec:gpuexperimentpytorch}, I will show benchmark results of the port compared to the original library.
 
-In Section \ref{sec:slicqparamsrch}, I described a random parameter search for the sliCQT which used the mix-phase inversion (MPI) oracle to pick sliCQT parameters. The MPI strategy, used by X-UMX and also by my proposed model xumx-sliCQ, combines the magnitude spectrogram of the estimate with the phase of the mix. Choosing sliCQT parameters that give the best MPI oracle score might result in a higher overall music demixing performance from the neural network, since the MPI oracle represents the upper limit of performance for any model that uses the MPI strategy. In Section \ref{sec:slicqparamresults}, I will show the sliCQT parameters that were chosen by the parameter search script. In Section \ref{sec:fasterbsscupy}, I used the GPU-accelerated CuPy library in the BSS (Blind Source Separation) metrics library to speed up the parameter search, and I will show the benchmark results of the CuPy speedup in Section \ref{sec:cupyportbss}.
+In Section \ref{sec:slicqparamsrch}, I described a random parameter search for the sliCQT which used the mix-phase inversion (MPI) oracle to pick sliCQT parameters. The MPI strategy, used by X-UMX and also by my proposed model xumx-sliCQ, combines the magnitude spectrogram of the estimate with the phase of the mix. Choosing sliCQT parameters that give the best MPI oracle score might result in a higher overall music demixing performance from the neural network, since the MPI oracle represents the upper limit of performance for any model that uses the MPI strategy. In Section \ref{sec:slicqparamresults}, I will show the sliCQT parameters that were chosen by the parameter search script. In Section \ref{sec:fasterbsscupy}, I used the GPU-accelerated CuPy library in the BSS (Blind Source Separation) metrics library to speed up the parameter search, and I will show the benchmark results of the CuPy BSS metrics in Section \ref{sec:cupyportbss}.
 
-After porting the sliCQT to PyTorch and choosing the sliCQT parameters, the next step was to train and evaluate the xumx-sliCQ neural network. Section \ref{sec:nnresults} contains the results for the neural network designs presented in Section \ref{sec:neuralnet}. First, Section \ref{sec:hyperparams} will list all of the training hyperparameters. Next, Section \ref{sec:networktraining} will describe the training times and losses of the network architectures described in Section \ref{sec:slicqarches}. Section \ref{sec:demixresults} will show the music demixing results of the fully trained xumx-sliCQ model, using both post-processing configurations described in Section \ref{sec:postprocessing}. Finally, Section \ref{sec:inferenceperf} will describe the inference performance and model size on disk.
+After porting the sliCQT to PyTorch and choosing the sliCQT parameters, the next step was to train and evaluate the xumx-sliCQ neural network. First, Section \ref{sec:hyperparams} will list all of the training hyperparameters. Next, Section \ref{sec:networktraining} will describe the training times and losses of the network architectures described in Section \ref{sec:slicqarches}. Section \ref{sec:demixresults} will show the music demixing results of the fully trained xumx-sliCQ model, using both post-processing configurations described in Section \ref{sec:postprocessing}. Finally, Section \ref{sec:inferenceperf} will describe the inference performance and model size on disk.
 
 \subsection{PyTorch port of the sliCQT}
 \label{sec:gpuexperimentpytorch}
@@ -46,9 +46,9 @@ The benchmark script for the PyTorch implementation of the sliCQT performs the f
 \subsection{Best sliCQT parameters with MPI oracle}
 \label{sec:slicqparamresults}
 
-In Section \ref{sec:slicqparamsrch}, I described the random search to choose the parameters of the sliCQT to use in xumx-sliCQ. Since the goal of xumx-sliCQ is to try to surpass X-UMX, which uses the STFT, the first step is to try to the sliCQT that has the most potential to surpass the STFT. This was done by choosing the best Signal-to-Distortion (SDR) score on the mixed-phase inversion (MPI) oracle waveforms of validation tracks of MUSDB18-HQ. The script ran for 60 iterations using random combinations of sliCQT parameters chosen from the ranges in Table \ref{table:slicqparams} in Section \ref{sec:slicqparamsrch}.
+In Section \ref{sec:slicqparamsrch}, I described the random search to choose the parameters of the sliCQT to use in xumx-sliCQ. Since the goal of xumx-sliCQ is to try to surpass X-UMX, which uses the STFT, the first step is to try to the sliCQT that has the most potential to surpass the STFT in music demixing. This was done by choosing the best Signal-to-Distortion (SDR) score on the mixed-phase inversion (MPI) oracle waveforms of validation tracks of MUSDB18-HQ. The MPI strategy is when the estimate of the magnitude spectrogram of the target is combined with the phase of the original mixed audio, described in Section \ref{sec:noisyphaseoracle}. The MPI strategy is used in both X-UMX and xumx-sliCQ.
 
-The best-performing sliCQT parameters chosen by the script used the following parameters: Bark scale, 262 bins, 32.9--22,050 Hz. These parameters were used in the final neural network, xumx-sliCQ. The slice length and transition length for the 262-bin Bark scale sliCQT with frequency limits of 32.9--22,050 Hz are automatically chosen to be 18,060 and 4,514 samples respectively, using the automatic slice length picker described in Section \ref{sec:improvelib}. Figure \ref{fig:bipolarslicqs} shows a visual comparison of the magnitude spectrograms of the best-performing sliCQT parameters alongside the STFT with the X-UMX default window size of 4,096 samples.
+The parameter search script ran for 60 iterations using random combinations of sliCQT parameters chosen from the ranges in Table \ref{table:slicqparams} in Section \ref{sec:slicqparamsrch}. The best-performing sliCQT parameters chosen by the script used the following parameters: Bark scale, 262 bins, 32.9--22,050 Hz. These parameters were used in the final neural network, xumx-sliCQ. The slice length and transition length were chosen to be 18,060 and 4,514 samples respectively, using the automatic slice length picker described in Section \ref{sec:improvelib}. Figure \ref{fig:bipolarslicqs} shows a visual comparison of the magnitude spectrograms of the best-performing sliCQT parameters alongside the STFT with the X-UMX default window size of 4,096 samples.
 
 \begin{figure}[ht]
 	\centering
@@ -58,9 +58,7 @@ The best-performing sliCQT parameters chosen by the script used the following pa
 	\label{fig:bipolarslicqs}
 \end{figure}
 
-The full MPI oracle evaluation of these sliCQT parameters are shown in the boxplot in Figure \ref{fig:oraclebssboxplot}. The MPI oracle was described in Section \ref{sec:noisyphaseoracle} as the strategy used by X-UMX to use the phase of the mix and estimated magnitude of the source to compute the final estimated source waveform.
-
-The BSS metrics of the best sliCQT are compared to the STFT with different window sizes. Recall that the hypothesis of this thesis is that the varying time-frequency resolution of the sliCQT may provide an advantage in a musical application over the fixed time-frequency resolution of the STFT, and that the window size of the STFT must be changed to trade time and frequency resolution. In some music source separation papers, a short window STFT is used for a high time resolution, and a long window STFT is used for a high frequency resolution \parencite{fitzgerald2, driedger}. In particular, \textcite{driedger} use a window size of 256 for the short window STFT and 4096 for the long window STFT, and \textcite{fitzgerald2} use a window of 1024 for the short window STFT and 16384 for the long window STFT. Therefore, to demonstrate the effect of time-frequency resolution on music demixing, I compared the best sliCQT chosen from the parameter search with different STFT window sizes, selecting powers of two between 256 and 16384 in the boxplot. Table \ref{table:winsizes} shows the evaluated transforms and their parameters. Note that the range of window sizes between 256--16384 contain 4096, which is the STFT window size of X-UMX.
+The BSS metrics of the MPI oracle evaluation of these sliCQT parameters is shown in the boxplot in Figure \ref{fig:oraclebssboxplot}, compared to the results from the STFT with different window sizes. The hypothesis of this thesis is that the varying time-frequency resolution of the sliCQT may provide an advantage in a musical application over the fixed time-frequency resolution of the STFT, and that the window size of the STFT must be changed to trade time and frequency resolution. In some music source separation papers, a short window STFT is used for a high time resolution, and a long window STFT is used for a high frequency resolution \parencite{fitzgerald2, driedger}. In particular, \textcite{driedger} use a window size of 256 for the short window STFT and 4096 for the long window STFT, and \textcite{fitzgerald2} use a window of 1024 for the short window STFT and 16384 for the long window STFT. Therefore, to demonstrate the effect of time-frequency resolution on music demixing, I compared the best sliCQT chosen from the parameter search with different STFT window sizes, selecting powers of two between 256 and 16384 in the boxplot. Table \ref{table:winsizes} shows the evaluated transforms and their parameters. Note that the range of window sizes between 256--16384 contain 4096, which is the STFT window size of X-UMX.
 
 \begin{table}[ht]
 	\centering
@@ -210,7 +208,7 @@ In this section, I will compare the music demixing results of the trained models
 
 In Section \ref{sec:xumx}, I described how X-UMX (CrossNet-Open-Unmix) is an evolution of UMX (Open-Unmix), and that for convenience throughout Section \ref{sec:methodology} and \ref{sec:experiment}, I would use X-UMX to refer to the concepts of both UMX and X-UMX. In the results shown in this and the next section, I will treat UMX and X-UMX separately. They have a different music demixing performance and inference performance, due to the differences in their network architectures, shown in Figure \ref{fig:umxandxumx}, and the different deep learning frameworks used in their reference implementations.
 
-The evaluated trained model of xumx-sliCQ uses the CDAE architecture. The Bi-LSTM architecture of xumx-sliCQ was not evaluated, due to requiring 36 days to train the full 1,000 epochs. The CDAE architecture was trained fully in four days, which is a more feasible training time for this thesis.
+The evaluated trained model of xumx-sliCQ uses the CDAE architecture. The Bi-LSTM architecture of xumx-sliCQ was not evaluated, due to requiring 36 days to train the full 1,000 epochs. The CDAE architecture was trained fully in four days, which is an acceptable training time for this thesis.
 
 The BSS metrics for the demixing results of UMX, X-UMX, and xumx-sliCQ were computed on the test set of the MUSDB18-HQ dataset, and the boxplot is shown in Figure \ref{fig:bssboxplot}. Table \ref{table:bsseval} contains the details of the evaluated models, including the median SDR across all tracks and targets. The results of xumx-sliCQ are computed for both of the Wiener Expectation Maximization (Wiener-EM) post-processing strategies, using the sliCQT or STFT. Wiener-EM will be abbreviated to WEM in the tables that follow.
 
