ch2 needs more work

--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -1,6 +1,10 @@
 \documentclass[report.tex]{subfiles}
 \begin{document}
 
+\todo[inline]{
+General tips:\\
+  Switch passive voice and we to I, be careful about us also
+}
 \section{Background}
 \label{sec:background}
 
